--- a/Iowa_Enrollment_Analysis.ipynb
+++ b/Iowa_Enrollment_Analysis.ipynb
@@ -23,7 +23,6 @@
    "source": [
     "### Project\n",
     "- This project aims to see if there was a significant change in enrollment for the public Iowa universities in 2020 and 2021\n",
-    "- The project assumes that a large portion of change would be due to Covid\n",
     "- The overall purpose of the project is not to determine if there was a negative change in enrollement due to Covid, as that is pretty well established, but rather to see if that change is ststistically significant when taken in the context of enrollemnt fluctuation in previous years\n",
     "- An additional point of interest is the change in enrollment from 2020-2021, which will be used a metric to see if the change has slowed, or increased\n",
     "    - The statistics used for this project is standard deviations from the mean, which is converted to z and p values \n",
@@ -57,7 +56,7 @@
    "outputs": [],
    "source": [
     "\n",
-    "# importing pandas and readinhg in data\n",
+    "# importing pandas and reading in data\n",
     "\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
