Added requirements, gitignore, and added y label to graphs

--- a/Iowa_Enrollment_Analysis.ipynb
+++ b/Iowa_Enrollment_Analysis.ipynb
@@ -356,6 +356,7 @@
     "    if len(labels) == 3:\n",
     "        plt.plot(years,data[2],label=labels[2])\n",
     "    plt.title(title_name)\n",
+    "    plt.ylabel('Headcount')\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n"
